macbook nav overflow fix 2

--- a/src/components/navBarComponent/NavBarStyles.css
+++ b/src/components/navBarComponent/NavBarStyles.css
@@ -92,10 +92,6 @@
   border-radius: 10px;
   background-image: var(--color-background-gradient);
   max-height: 470px;
-  width: max-content;
-  max-width: 55vw;
-  overflow-x: auto;
-  box-sizing: border-box;
 }
 .nav-inner-container {
   padding: 10px;
@@ -130,11 +126,11 @@
 #nav-menu-icon {
   display: none;
 }
-#popup-nav-peoduct-container {
+.popup-nav-product-container {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  max-height: 340px;
+  max-height: 340px !important;
 }
 .nav-link-active {
   color: var(--color-primary);
